- fixed general table styling and border - reworked table in documentation_devil_jump to have fewer rows -> easier to comprehend on small screens - moved markdown specific styling from project-documentation.scss to markdown-styles.scss - added overflow-wrap to markdown text to wrap long lines

--- a/src/app/pages/projects/project-documentation/project-documentation.scss
+++ b/src/app/pages/projects/project-documentation/project-documentation.scss
@@ -1,9 +1,3 @@
 mat-spinner {
   align-self: center;
 }
-
-.markdownContainer {
-  .img {
-    max-width: 100%;
-  }
-}
