--- a/src/app/pages/projects/project-summary-base/project-summary-base.scss
+++ b/src/app/pages/projects/project-summary-base/project-summary-base.scss
@@ -28,10 +28,16 @@ mat-card-content {
 
   table {
     width: 100%;
+  }
 
-    td {
-      border: solid var(--mat-sys-on-surface) 1px;
-    }
+  //gives the table a normal border
+  table, th, td {
+    border: solid var(--mat-sys-on-surface) 1px;
+    border-collapse: collapse;
+  }
+
+  th, td {
+    padding: 5px;
   }
 
   @media only screen and (max-width: customVariables.$mobile-max-width) {
